[tool.poetry]
name = "llm-elasticsearch-cache"
version = "0.1.0"
description = "A caching layer for LLMs that exploits Elasticsearch, fully compatible with Langchain caching"
packages = [{include = "llmescache", from = "./src"}]
authors = ["SpazioDati s.r.l."]
maintainers = ["Giacomo Berardi <berardi@spaziodati.eu>", "Gabriele Ghisleni <gabriele.ghisleni@spaziodati.eu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SpazioDati/llm-elasticsearch-cache"
keywords = ["langchain", "elasticsearch", "openai", "llm", "chatgpt"]
classifiers=[
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.7"
elasticsearch = "^8.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.6.1"
mypy = "^1.8.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
